# NeMo-Forced-Aligner

./: README.md  align.py  pyproject.toml
forced_aligner/: __init__.py  align.py
forced_aligner/utils/: aligner_utils.py  nemo_logging.py
